added dream part

--- a/index.html
+++ b/index.html
@@ -9,16 +9,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section>
+    <section class="top-section">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1> <span class="name-highlight">Iqbal</span> Website</h1>
             <h3>Professional Web Developer</h3>
             <p>I can build Professional website specifically engaged in, the development of World Wide Web applications using a client–server model. The applications typically use HTML, CSS and JavaScript in the client, Node.JS uses in the server, and http for communications between client and server.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/md-iqbal-ahmed-6b9348178/">MY Profile</a>
         </div>
 
         <div class="half-width">
-            <img src="images/profile1.png" alt="">
+            <img src="images/profile2.png" alt="">
+        </div>
+    </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/profile3.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <h3>Become world's Best Web Developer</h3>
+            <p>I believe in myself. I am hard working also. I accept a problem as a challenge and try to my best for solve it. I think this is the best skill which I have and Insha Allah one day It will make me world's best Web Developer</p>
+            <a target="_blank" class="link-button" href="https://www.linkedin.com/in/md-iqbal-ahmed-6b9348178/">DOWNLOAD RESUME</a>
         </div>
     </section>
 </body>
