--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="top-section">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1> <span class="name-highlight">Iqbal</span> Website</h1>
+            <h1> <span class="orange-highlight">Iqbal</span> Website</h1>
             <h3>Professional Web Developer</h3>
             <p>I can build Professional website specifically engaged in, the development of World Wide Web applications using a client–server model. The applications typically use HTML, CSS and JavaScript in the client, Node.JS uses in the server, and http for communications between client and server.</p>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/md-iqbal-ahmed-6b9348178/">MY Profile</a>
@@ -32,6 +32,20 @@
             <p>I believe in myself. I am hard working also. I accept a problem as a challenge and try to my best for solve it. I think this is the best skill which I have and Insha Allah one day It will make me world's best Web Developer</p>
             <a target="_blank" class="link-button" href="https://www.linkedin.com/in/md-iqbal-ahmed-6b9348178/">DOWNLOAD RESUME</a>
         </div>
+    </section>
+
+    <section class="experiance-area">
+        <h2>Experiences</h2>
+        <div class="half-width">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="orange-highlight">2021-Present | Pro level Developer</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo praesentium magnam temporibus aspernatur voluptate quam? Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. </p>
+        </div>
+        <div class="half-width">
+            <h2>Junior Web Developer</h2>
+            <h3 class="orange-highlight">2020-2021 | Junior Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto a voluptas ipsa quis, dolorum, nemo sapiente beatae ab dolore, similique delectus quos. Animi, odio adipisci!</p>
+         </div>
     </section>
 </body>
 </html>
