--- a/index.html
+++ b/index.html
@@ -36,16 +36,19 @@
 
     <section class="experiance-area">
         <h2>Experiences</h2>
-        <div class="half-width">
+        <div id="full-stack" class="half-width single-experience">
             <h2>Full Stack Web Developer</h2>
             <h3 class="orange-highlight">2021-Present | Pro level Developer</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo praesentium magnam temporibus aspernatur voluptate quam? Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. </p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo praesentium magnam temporibus aspernatur voluptate quam? Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo enim praesentium vel consequatur perferendis nam quia id ullam excepturi fugit. </p>
         </div>
-        <div class="half-width">
+        <div id="junior-dev" class="half-width single-experience">
             <h2>Junior Web Developer</h2>
             <h3 class="orange-highlight">2020-2021 | Junior Developer</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto a voluptas ipsa quis, dolorum, nemo sapiente beatae ab dolore, similique delectus quos. Animi, odio adipisci!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto a voluptas ipsa quis, dolorum, nemo sapiente beatae ab dolore, similique delectus quos. Animi, odio adipisci! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident aliquid quos distinctio numquam culpa deserunt sint dicta voluptatibus molestiae nobis.</p>
          </div>
     </section>
+    <footer>
+        <p>© Iqbal 2021 all rights reserved</p>
+    </footer>
 </body>
 </html>
